# ai-freelancer-system

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  fly.toml  pyproject.toml
.claude/: settings.local.json
scripts/: create_kwork.py  inspect_kwork_form.py  make_covers.py  make_portfolio.py  view_kwork_detail.py  view_kwork_profile.py
src/: api.py  config.py  main.py
src/agents/: analyzer.py  base.py  executor.py  orchestrator.py  qa.py  response_writer.py  strategy.py
src/bot/: bot.py  handlers.py  scheduler.py
src/claude_api/: client.py  prompts.py  schemas.py
src/database/: db.py  models.py  queries.py
src/kwork/: categories.py  models.py  parser.py
src/utils/: finance.py  logger.py  rate_limiter.py
templates/: kwork_listings.md  response_new_profile.md  response_with_reviews.md
templates/kwork_descriptions/: copywriting.md  landing_page.md  translation.md
