[project]
name = "ai-freelancer-system"
version = "0.1.0"
description = "AI-система для заработка на фриланс-площадках с помощью Claude"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.42.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "sqlmodel>=0.0.22",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aiogram>=3.13.0",
    "typer>=0.12.0",
    "apscheduler>=3.10.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
freelancer = "src.main:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
